[metadata]
name = lcac-governor
version = 1.0.0
description = LCAC Governor Python SDK
long_description = file: ../README.md
long_description_content_type = text/markdown
author = Quinton Stackfield
license = Apache-2.0
url = https://github.com/qstackfield/lcac-governor
project_urls =
    Documentation = https://github.com/qstackfield/lcac-governor/tree/main/docs
    Source = https://github.com/qstackfield/lcac-governor

[options]
packages = find:
package_dir =
    = ../sdk/python
python_requires = >=3.8
install_requires =
    requests>=2.24.0

[options.packages.find]
where = ../sdk/python
