[metadata]
name = lcac-sdk
version = 0.1.0
author = Quinton Stackfield
author_email = qstackfield@seedcore.io
description = LCAC Governor Python SDK – cognitive integrity engine for LLMs and agents.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qstackfield/lcac-governor
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = sdk/python
python_requires = >=3.8
install_requires =
    requests>=2.28

[options.packages.find]
where = sdk/python
